# 2025-P12-RL-Footbal

./: .gitignore  README.md  action_logic.py  askdjhskfjbd.py  main.py  pyproject.toml  requirements.txt  test.py
Csv/: formation_roles.csv  unique_roles.csv
FreeKickAnalysis/: drawPitch.py  freeKickEnv.py  freeKickRLModel.ipynb  freeKickTest.ipynb
Lineups/: LineupsAnalysis.ipynb  LineupsShowdown.ipynb  lineupsDict.py
RLEnvironment/: ball.py  footballEnv.py  offensiveScenarioEnv.py  offensiveScenatioEnv.py  pitch.py  player.py  team.py
RLModel/: firstTryRLModel.py
RLmodel/: ball.py  footballEnv.py  player.py  team.py
TactRL/: field.py  test.py
Test/: Test1.ipynb  TestReinforcementLearning.ipynb  TestStatsBombDataset.ipynb  testAttDefGK.py  testBallPhysics  testMove.py  testMove_SA.py  testMultiAgent.py  testOffensiveScenario.py  testPost.py  testShot.py  testShot_SA.py  testView.py  testView_SA.py  whatIf.ipynb
data/: unique_formations.csv  unique_roles.csv
env/: ball.py  offensiveScenarioEnv.py  offensiveScenarioMove.py  offensiveScenarioMoveSingleAgent.py  pitch.py
env/objects/: ball.py  pitch.py
env/scenarios/: offensiveScenarioMoveSingleAgent.py  offensiveScenarioShootSingleAgent.py  offensiveScenarioShotSingleAgent.py
env/scenarios/singleAgent/: offensiveScenarioMoveSingleAgent.py  offensiveScenarioShotSingleAgent.py  offensiveScenarioViewSingleAgent.py
helpers/: action_logic.py  action_strategies.py  ballPhysics.py  drawPitch.py  helperFunctions.py  utils.py  visuals.py
players/: player.py  playerAttacker.py  playerBase.py  playerDefender.py  playerGoalkeeper.py
src/football_tactical_ai/configs/: __init__.py  configEvaluationMultiAgent.py  configEvaluationSingleAgent.py  configMultiAgentEnv.py  configTrainMultiAgent.py  configTrainSingleAgent.py  configTrainWhatIF.py  multiAgentEnvConfig.py  pitchSettings.py  train_single_agent.py
src/football_tactical_ai/evaluation/: eval_adversarial.py  eval_multi_agent.py  eval_single_agent.py  eval_what_if.py  plot_shot_metrics_advanced.py  summarize_shot_metrics.py
src/football_tactical_ai/helpers/: __init__.py  helperEvaluation.py  helperFunctions.py  helperTraining.py  helper_evaluation.py  helper_training.py  (+3 more)
statsbomb360/: role_heatmap.py  testHeatmap.py
statsbomb360/data/: role_heatmaps.pkl
statsbomb360/lineups/: LineupsAnalysis.ipynb  LineupsShowdown.ipynb
training/: trainingMoveSingleAgent.py  trainingShotSingleAgent.py  trainingViewSingleAgent.py
training/trainingMultiAgent/: trainingMultiAgent.py
training/trainingSingleAgent/: trainingShotSingleAgent.py
(+156 files in other folders)
