[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football_tactical_ai"
version = "0.1.0"
description = "RL football environments"
requires-python = ">=3.10"
dependencies = [
  "gymnasium==0.29",
  "torch==2.0.0",
  "stable-baselines3==2.0.0",
  "tianshou==1.1.0",
  "shimmy==1.3.0",
  "tensorboard==2.14.1",
  "tensorflow-macos==2.14.1",
  "matplotlib>=3.7",
  "numpy>=1.25",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "tqdm",
  "statsbombpy",
  "seaborn",
  "networkx",
  "scipy>=1.11",
  "torchvision>=0.15"
]

[tool.setuptools.packages.find]
where = ["src"]
