[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football_tactical_ai"
version = "0.1.0"
description = "RL football environments"
requires-python = ">=3.10"
dependencies = [
  # Core RL libs
  "gymnasium>=1.0.0,<1.1.0",        # SB3 & PettingZoo require gymnasium
  "torch>=2.3,<3.0",
  "torchvision>=0.18,<0.19",
  "stable-baselines3>=2.5.0,<3.0.0",
  "pettingzoo>=1.24.0",
  "supersuit>=3.4.0",
  "shimmy>=1.3.0",

  # Multi-agent / distributed RL
  "ray[rllib]>=2.9.0",
  "dm-tree>=0.1.8",

  # Monitoring
  "tensorboard>=2.14",

  # Scientific stack
  "matplotlib>=3.7",
  "numpy>=1.25",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "scipy>=1.11",

  # Football-specific
  "statsbombpy",
]

[project.optional-dependencies]
dev = [
  "tqdm",
  "seaborn",
  "networkx"
]

[tool.setuptools.packages.find]
where = ["src"]
